# pictureframe

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  PLAN-api-macros-integration.md  PLAN-mat-presets-phase2.md  PLAN-mat-presets.md  PLAN-sqlx-and-macro-integration.md  README.md  SESSION-SUMMARY.md  TODO.md  flake.nix  justfile
crates/api-client-server-macros/: AGENTS.md  Cargo.toml  justfile
crates/api-client-server-macros/examples/: api_example.rs
crates/api-client-server-macros/src/: lib.rs
crates/api-client-server-macros/tests/: client.rs  router.rs
crates/api-client-server-macros/tests/common/: mod.rs
crates/api-client-server-macros/tests/expand/: all_methods.expanded.rs  all_methods.rs  basic_get.expanded.rs  basic_get.rs  multiple_path_params.expanded.rs  multiple_path_params.rs  path_and_body.expanded.rs  path_and_body.rs  path_param.expanded.rs  path_param.rs  post_with_body.expanded.rs  post_with_body.rs  query_param.expanded.rs  query_param.rs
crates/api-client-server-macros/tests/ui/: invalid_method.rs  invalid_method.stderr  missing_param_annotation.rs  missing_param_annotation.stderr  missing_path.rs  missing_path.stderr  missing_return_type.rs  missing_return_type.stderr  not_impl_block.rs  not_impl_block.stderr
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/entity/: Cargo.toml
crates/entity/src/: album.rs  lib.rs  mod.rs  photo.rs  prelude.rs
crates/frontend-admin/: Cargo.toml  index.html
crates/frontend-admin/src/: main.rs
crates/frontend-viewer/: Cargo.toml  index.html
crates/frontend-viewer/src/: main.rs
crates/migration/: Cargo.toml
crates/migration/src/: lib.rs  m20220101_000001_create_photos_table.rs  m20220101_000002_create_albums_table.rs
migrations/: 001_create_photos.sql  002_create_albums.sql  003_create_album_photos.sql  004_create_settings.sql  005_add_mat_preset.sql
nix/checks/: checklints.nix  vm.nix
nix/devshells/: default.nix
nix/lib/: default.nix
nix/modules/nixos/: pictureframe.nix  server.nix  viewer.nix
scripts/: upload-photo
src/: api.rs  app.rs  lib.rs  main.rs  models.rs  on_disk_photo.rs  test_helpers.rs
src/api/: albums.rs  photos.rs  settings.rs
tests/: api.rs  client.rs  e2e.rs
