[package]
name = "pictureframe"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "crates/*"]

[dependencies]
common = {path = "./crates/common"}
migration = {path = "./crates/migration"}
entity = {path = "./crates/entity"}
anyhow = "1.0.101"
axum = { version = "0.8.8", features = ["macros"] }
directories = "6.0.0"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
ts-rs = { version = "12.0.1", features = ["chrono", "chrono-impl", "serde-compat"] }
clap = { version = "4.5.57", features = ["derive"] }
sea-orm = { version = "1.1.19", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros", "with-json", "with-chrono", "with-uuid"] }
which = "8.0.0"
image = { version = "0.25.9", features = ["jpeg"] }
image_hasher = "3.1.0"
kamadak-exif = "0.6.1"
chrono = { version = "0.4.43", features = ["serde"] }
tempfile = "3.24.0"
tower-http = { version = "0.6.8", features = ["fs", "cors"] }
axum-extra = "0.12.5"
tower-service = "0.3.3"
console_log = "1.0.0"
log = "0.4.29"
