[package]
name = "pictureframe"
description = "Display pictures from user-curated albums"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/adam-gaia/pictureframe"
repository = "https://github.com/adam-gaia/pictureframe"
authors = ["Adam Gaia <git@agaia.dev>"]
include = ["src/**/*", "migrations/*", "LICENSE-*", "README.md"]


[workspace]
members = [".", "crates/*"]

[dependencies]
api-macros = {version = "0.1.0", path = "./crates/api-client-server-macros"}
pictureframe-common = {version = "0.1.0", path = "./crates/common"}
anyhow = "1.0.101"
axum = { version = "0.8.8", features = ["macros", "multipart"] }
directories = "6.0.0"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
ts-rs = { version = "12.0.1", features = ["chrono", "chrono-impl", "serde-compat"] }
clap = { version = "4.5.57", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "chrono"] }
which = "8.0.0"
image = { version = "0.25.9", features = ["jpeg"] }
image_hasher = "3.1.0"
kamadak-exif = "0.6.1"
chrono = { version = "0.4.43", features = ["serde"] }
tempfile = "3.24.0"
tower-http = { version = "0.6.8", features = ["fs", "cors"] }
axum-extra = "0.12.5"
tower-service = "0.3.3"
console_log = "1.0.0"
log = "0.4.29"
reqwest = { version = "0.13.2", features = ["json"] }

[dev-dependencies]
tokio-test = "0.4"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
