[package]
name = "api-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits", "parsing"] }
quote = "1"
proc-macro2 = "1"
darling = "0.20"

[dev-dependencies]
# For macro expansion and UI tests
trybuild = "1"
macrotest = "1"

# For integration tests and examples
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "brotli", "gzip", "json", "rustls-tls", "stream"], default-features = false }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[[example]]
name = "api_example"
path = "examples/api_example.rs"
