[package]
name = "pictureframe-common"
version = "0.1.0"
edition = "2024"
description = "Code shared between components of pictureframe"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/adam-gaia/pictureframe"
repository = "https://github.com/adam-gaia/pictureframe"
authors = ["Adam Gaia <git@agaia.dev>"]
include = ["src/**/*", "LICENSE-*", "README.md"]


[dependencies]
anyhow = "1.0.101"
chrono = { version = "0.4.43", features = ["serde"] }
log = "0.4.29"
reqwasm = "0.5.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
