[package]
name = "frontend-admin"
version = "0.1.0"
edition = "2024"

[dependencies]
common = {path = "../common"}
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
leptos = { version = "0.8.15", features = ["csr"] }
log = "0.4.29"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "File",
    "FileList",
    "FormData",
    "HtmlInputElement",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Window",
] }
