[package]
name = "pictureframe-frontend-admin"
version = "0.1.0"
edition = "2024"
description = "Pictureframe's admin webapp"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/adam-gaia/pictureframe"
repository = "https://github.com/adam-gaia/pictureframe"
authors = ["Adam Gaia <git@agaia.dev>"]
include = ["src/**/*", "LICENSE-*", "README.md"]


[dependencies]
pictureframe-common = {path = "../common"}
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
leptos = { version = "0.8.15", features = ["csr"] }
log = "0.4.29"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "File",
    "FileList",
    "FormData",
    "HtmlInputElement",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Window",
] }
