[package]
name = "frontend-viewer"
version = "0.1.0"
edition = "2024"
description = "Pictureframe's main webapp for viewing rotating images"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/adam-gaia/pictureframe"
repository = "https://github.com/adam-gaia/pictureframe"
authors = ["Adam Gaia <git@agaia.dev>"]
include = ["src/**/*", "LICENSE-*", "README.md"]


[dependencies]
pictureframe-common = { version = "0.1.0", path = "../common"}
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
leptos = { version = "0.8.15", features = ["csr"] }
log = "0.4.29"
